JunctionProject/force-app/main/default/objects/Agreement_Product_Junction__c/Agreement_Product_Junction__c.object-meta.xml
<CustomObject>
    <label>Agreement Product</label>
    <nameField>
        <label>Agreement Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>