JunctionProject/force-app/main/default/objects/Agreement_Product_Junction__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>Agreement Products</relationshipLabel>
    <relationshipName>Agreement_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>