JunctionProject/force-app/main/default/objects/Agreement_Product_Junction__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Agreement Products</relationshipLabel>
    <relationshipName>Agreement_Products</relationshipName>
    <type>Lookup</type>
</CustomField>